--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ nav div .nav-btn svg:hover {
   fill: var(--color-grey-40);
 }
 
-main section {
+main .video-promo-section {
   width: 100vw;
   height: 94vh;
   display: flex;
@@ -91,12 +91,6 @@ main section .media-wrapper {
   width: 100%;
   height: 100%;
   overflow: hidden;
-}
-
-main section .media-wrapper video {
-  width: 100%;
-  height: 90%;
-  object-fit: cover;
 }
 
 main section .media-wrapper::before {
@@ -114,12 +108,17 @@ main section .media-wrapper::before {
     rgba(var(--color-black), 0)
   );
 }
+main .video-promo-section .media-wrapper video {
+  width: 100%;
+  height: 90%;
+  object-fit: cover;
+}
 
 main section .media-content {
   width: 100%;
   position: absolute;
   bottom: 0;
-  height: 24%;
+  height: 10rem;
   padding: 1rem;
   display: flex;
   flex-direction: column;
@@ -142,6 +141,20 @@ main section .media-content .big-btn {
 main section .media-content .big-btn:hover {
   color: var(--color-grey-30);
   border: 0.1rem solid var(--color-grey-20);
+}
+
+main .product-section {
+  position: relative;
+  width: 100vw;
+  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+main .product-section .media-wrapper img {
+  width: 100%;
+  height: 90%;
+  object-fit: cover;
 }
 
 @media screen and (max-width: 767px) {
