--- a/style.css
+++ b/style.css
@@ -161,5 +161,19 @@ main .product-section .media-wrapper img {
   object-fit: cover;
 }
 
+.actions-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 16px;
+}
+
+.action {
+  width: 100%;
+  text-align: center;
+  padding: 16px;
+  border: 1px solid #ccc;
+}
+
 @media screen and (max-width: 767px) {
 }
